# py-secretfile

./: .gitignore  AGENTS.md  PLAN.md  README.md  pyproject.toml
.devcontainer/: devcontainer.json
examples/: Secretfile
prds/: 01-cli-mixed-case-env-keys.md  02-cli-secretfile-parent-lookup.md
secretfile/: __init__.py  cli.py  exceptions.py  parser.py  vault.py
tests/: test_cli.py  test_parser.py  test_vault.py
